# SAStocks

./: pyproject.toml
sastocks/: __init__.py  __main__.py  config.py  console.py  logger.py  main.py  models.py  polygon_client.py  pull_financials.py  pull_news.py  pull_sentiment.py  tickers.py  types.py
sastocks/cli/: __init__.py
sastocks/database/: __init__.py
tests/: test_polygon_client.py  test_pull_news.py  test_pull_sentiment.py  test_tickers.py
